# fuelprice

./: .gitignore  .justfile  README.md  TODO.md  linting.sh  mypy.sh  pyproject.toml  racq_data.py  racq_data_requests.py  requirements.txt  send_notif.sh  setup.py
fuel_price/: __init__.py  boxplot.py  boxplot2.py  boxplot_with_dash.py  dash_app.py  petrol_prices.csv  racq_fuel_price.py
tests/: test_boxplot_with_dash.py
